build: 升级JDK版本到25